--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
 	"dependencies": {
 		"axios": "^0.17.0",
 		"react": "16.0.0-beta.5",
-		"react-native": "0.49.5"
+		"react-native": "0.49.5",
+		"react-redux": "^5.0.6",
+		"redux": "^3.7.2",
+		"redux-promise": "^0.5.3",
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
