--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"axios": "^0.17.0",
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.5",
+		"react-native-router-flux": "^3.35.0",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
 		"redux-promise": "^0.5.3",
