--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
 		"redux-promise": "^0.5.3",
-		"redux-thunk": "^2.2.0"
+		"redux-thunk": "^2.2.0",
+		"yarn": "^1.3.2"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
